manifest/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://edu-stream-client.vercel.app"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: mobicart.shop
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: edustream-auth-service
                port:
                  number: 4001
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: edustream-notification-service
                port:
                  number: 4002
          - path: /api/course
            pathType: Prefix
            backend:
              service:
                name: edustream-course-service
                port:
                  number: 4003
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: edustream-chat-service
                port:
                  number: 4005        
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: edustream-payment-service
                port:
                  number: 4004
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: edustream-chat-service
                port:
                  number: 4005
